
M       cg_vbm8_batch.m
M       cg_spm8_batch.m

Corrected call of spm_get_defaults in cg_*_batch.m to prevent output of
defaults.
------------------------------------------------------------------------
r388 | gaser | 2011-01-05 22:40:56

M       VBM8-Manual.pdf
M       VBM8-Manual.doc

Updated VBM8-Manual.
------------------------------------------------------------------------
r389 | gaser | 2011-01-24 20:32:47

A       VBM8-Manual_Japanese.doc
A       VBM8-Manual_Japanese.pdf

Added japanese version of manual.
------------------------------------------------------------------------
r390 | gaser | 2011-01-24 20:38:53

M      sanlmMex.mexw32
M      AmapMex.mexa64
M      AmapMex.mexw32
M      cg_realign.m
M      sanlmMex.mexw64
M      VBM8-Manual.pdf
M      sanlmMex_noopenmp.mexglx
M      sanlmMex.mexglx
M      sanlmMex.mexmaci64
M      AmapMex.mexw64
M      sanlmMex_noopenmp.mexmaci64
M      sanlmMex_noopenmp.mexa64
M      sanlmMex.mexa64
M      VBM8-Manual.doc
M      AmapMex.mexglx

(1) Corrected definition of groups/time points in VBM8 manual 
    (statistical analysis of longitudinal data). Thanks to Pieter van de 
    Vijver for finding this error.
(2) Recompiled all c-files.
------------------------------------------------------------------------
r391 | gaser | 2011-01-27 22:59:47

M      cg_spmT2x.m

Implemented new spm correction for non-stationarity in cg_spmT2x.m.
------------------------------------------------------------------------
r392 | gaser | 2011-02-10 17:40:00

M      VBM8-Manual.pdf
M      VBM8-Manual.doc

Added missing second main effect for statistical analysis of longitudinal data
in one group.
------------------------------------------------------------------------
r393 | gaser | 2011-02-11 10:29:34

M       VBM8-Manual_Japanese.doc
M       VBM8-Manual_Japanese.pdf

Updated japanese version of manual.
------------------------------------------------------------------------
r394 | gaser | 2011-02-24 23:22:20